--- a/index.html
+++ b/index.html
@@ -2,99 +2,103 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Food Logger</title>
+  <title>Food Log</title>
   <style>
     body { font-family: sans-serif; margin: 40px; max-width: 500px; }
+    textarea { width: 100%; height: 120px; padding: 8px; margin: 10px 0; }
+    button { padding: 10px 15px; cursor: pointer; margin-bottom: 20px; }
+    #status { margin-top: 10px; }
+    .entry { padding: 10px; background: #f0f0f0; border-radius: 6px; margin-bottom: 8px; cursor: pointer; }
+    .entry:hover { background: #e2e2e2; }
     h2 { margin-top: 40px; }
-    input, textarea, select {
-      width: 100%; padding: 8px; margin: 6px 0; box-sizing: border-box;
-    }
-    button { padding: 10px 15px; cursor: pointer; }
-    .section { margin-bottom: 50px; padding: 20px; border: 1px solid #ddd; border-radius: 8px; }
   </style>
 </head>
 <body>
 
-<h1>Food Logger</h1>
+<h1>Food Log</h1>
+<p>Type anything about what you ate:</p>
 
-<!-- FAST ENTRY -->
-<div class="section">
-  <h2>Fast Entry</h2>
-  <textarea id="fast_desc" placeholder="Quick description (e.g. 'coffee and croissant')"></textarea>
-  <button onclick="sendFast()">Submit Fast Entry</button>
-</div>
+<textarea id="entry" placeholder="Example: 'Lunch: chicken and rice with mayo'"></textarea>
 
-<!-- DETAILED ENTRY -->
-<div class="section">
-  <h2>Detailed Entry</h2>
-
-  <input id="date" placeholder="Date (YYYYMMDD)">
-  <input id="time" placeholder="Time (HH:MM)">
-  <input id="meal" placeholder="Meal (breakfast, lunch, snack...)">
-  <textarea id="desc" placeholder="Food Description"></textarea>
-  <input id="amount" placeholder="Amount (optional)">
-  <input id="kcal" placeholder="kcal (optional)">
-  <input id="protein" placeholder="protein g (optional)">
-  <input id="carbs" placeholder="carbs g (optional)">
-  <input id="fats" placeholder="fats g (optional)">
-
-  <button onclick="sendDetailed()">Submit Detailed Entry</button>
-</div>
+<button onclick="submitEntry()">Submit</button>
 
 <p id="status"></p>
 
+<h2>Recent Entries</h2>
+<div id="history"></div>
+
 <script>
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbz3-Yzw4tmb-iOBBuw_HCy9zSHhDJyv8qIx28fkDfpULuSJKVsRb_64gAD79OE3dQcq/exec";
+const HISTORY_KEY = "foodlog_history";
 
-async function postData(payload) {
-  const res = await fetch(ENDPOINT, {
-    method: "POST",
-    body: JSON.stringify(payload)
+// ---------------------------
+// Load history on page load
+// ---------------------------
+document.addEventListener("DOMContentLoaded", loadHistory);
+
+function loadHistory() {
+  const historyDiv = document.getElementById("history");
+  historyDiv.innerHTML = "";
+
+  const saved = JSON.parse(localStorage.getItem(HISTORY_KEY) || "[]");
+
+  saved.forEach(item => {
+    const div = document.createElement("div");
+    div.className = "entry";
+    div.innerText = item;
+    div.onclick = () => {
+      document.getElementById("entry").value = item;
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    };
+    historyDiv.appendChild(div);
   });
-  const data = await res.json();
-  document.getElementById("status").innerText = data.status;
 }
 
-/* FAST ENTRY */
-function sendFast() {
-  const now = new Date();
-  const date = now.toISOString().slice(0,10).replace(/-/g,"");
-  const time = now.toTimeString().slice(0,5);
+// ---------------------------
+// Save entry to local history
+// ---------------------------
+function addToHistory(text) {
+  let saved = JSON.parse(localStorage.getItem(HISTORY_KEY) || "[]");
 
-  const desc = document.getElementById("fast_desc").value;
+  // Add newest at top
+  saved.unshift(text);
 
-  const payload = {
-    date: date,
-    time: time,
-    meal: "fast-entry",
-    desc: desc,
-    amount: "",
-    kcal: "",
-    protein: "",
-    carbs: "",
-    fats: ""
-  };
+  // Keep only last 20
+  saved = saved.slice(0, 20);
 
-  postData(payload);
+  localStorage.setItem(HISTORY_KEY, JSON.stringify(saved));
+  loadHistory();
 }
 
-/* DETAILED ENTRY */
-function sendDetailed() {
-  const payload = {
-    date: document.getElementById("date").value,
-    time: document.getElementById("time").value,
-    meal: document.getElementById("meal").value,
-    desc: document.getElementById("desc").value,
-    amount: document.getElementById("amount").value,
-    kcal: document.getElementById("kcal").value,
-    protein: document.getElementById("protein").value,
-    carbs: document.getElementById("carbs").value,
-    fats: document.getElementById("fats").value
-  };
+// ---------------------------
+// Submit entry
+// ---------------------------
+async function submitEntry() {
+  const text = document.getElementById("entry").value.trim();
+  if (!text) return;
 
-  postData(payload);
+  // Add to local history immediately
+  addToHistory(text);
+
+  // Clear text box
+  document.getElementById("entry").value = "";
+
+  // Send raw text to Apps Script
+  try {
+    const response = await fetch(ENDPOINT, {
+      method: "POST",
+      body: JSON.stringify({ entry: text })
+    });
+
+    const result = await response.json();
+    document.getElementById("status").innerText = result.status;
+  } catch (err) {
+    document.getElementById("status").innerText = "error submitting";
+  }
 }
 </script>
 
 </body>
 </html>
+
+
