--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@ async function submitEntry() {
   // Send raw text to Apps Script
   try {
     const response = await fetch(ENDPOINT, {
-      method: "POST",
-      body: JSON.stringify({ entry: text })
+    method: "POST",
+    headers: {
+        "Content-Type": "application/json"      // REQUIRED
+    },
+    body: JSON.stringify({ entry: text })
     });
 
     const result = await response.json();
