--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Food Log</h1>
 <p>Type anything about what you ate:</p>
 
-<textarea id="entry" placeholder="Example: 'Lunch: chicken and rice with mayo'"></textarea>
+<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers'"></textarea>
 
 <button onclick="submitEntry()">Submit</button>
 
