--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Food Log</h1>
 <p>Type anything about what you ate:</p>
 
-<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers'"></textarea>
+<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers with lettuce'"></textarea>
 
 <button onclick="submitEntry()">Submit</button>
 
@@ -28,7 +28,7 @@
 <div id="history"></div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbwpdY5q-QfkUXknPQZtlJxMr8-tY3NIVUDVRqOeHC8Qu_oK99QYV6jp6NckcUq2UC8_/exec";
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbxSukLiG3zgCUKz8vZLoTyYEGSuRFY404rFbVX0a8kDGKTjvaaEKZ7o62W8jn0X4g_h/exec";
 const HISTORY_KEY = "foodlog_history";
 
 // ---------------------------
