--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Food Log</h1>
 <p>Type anything about what you ate:</p>
 
-<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers with buns'"></textarea>
+<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers with lettuce and buns'"></textarea>
 
 <button onclick="submitEntry()">Submit</button>
 
@@ -28,7 +28,7 @@
 <div id="history"></div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycby6xC07GCmuFE3jNXnaGVgXlkQroJfYBtjQEg3nhLscL30Ur9PaFgjYNyAZA270BMsZ/exec";
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbyidA1Eh5_Pv3wnhVsXdtifQDeutB5EaySDqbKIfKkgwMh0hqvMfV6kY1KDXiNQSxY0/exec";
 const HISTORY_KEY = "foodlog_history";
 
 // ---------------------------
