--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Food Log</h1>
 <p>Type anything about what you ate:</p>
 
-<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers with lettuce and buns'"></textarea>
+<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers with buns'"></textarea>
 
 <button onclick="submitEntry()">Submit</button>
 
@@ -28,7 +28,7 @@
 <div id="history"></div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbxiCm2E83icFizwrXQaLdJgO65g9PLwsHa5cyVIw13ZI2f_u7vPKy-P_ZRajoKhYBk/exec";
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbwHbCbANfmcnXVmviz1vlLLs03lqddrzqSxNvtm0GLESgmp1-B8p7Dqip1L2fEdJuFM/exec";
 const HISTORY_KEY = "foodlog_history";
 
 // ---------------------------
