--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Food Log</h1>
 <p>Type anything about what you ate:</p>
 
-<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers with lettuce'"></textarea>
+<textarea id="entry" placeholder="Example: 'Lunch: chicken burgers with buns'"></textarea>
 
 <button onclick="submitEntry()">Submit</button>
 
@@ -28,7 +28,7 @@
 <div id="history"></div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycby-HTfDHNCo-aUJVOl2oAyK3ot01e9Yc3j09LfedMdOhOxg7eST0ilgxpKo1riRoXmS/exec";
+const ENDPOINT = "hthttps://script.google.com/macros/s/AKfycbzRR-RHey2MaVnmwmZFPPe9wFv3RPc4hPrJ6Zr9Csfp9RwUyrAj9KBWsWoAMG1Rt-SY/exec";
 const HISTORY_KEY = "foodlog_history";
 
 // ---------------------------
