--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Food Log</title>
   <style>
-    body { font-family: sans-serif; margin: 40px; max-width: 500px; }
+    body { font-family: sans-serif; margin: 40px; max-width: 500px; text-align: center; }
     textarea { width: 100%; height: 120px; padding: 8px; margin: 10px 0; }
     button { padding: 10px 15px; cursor: pointer; margin-bottom: 20px; }
     #status { margin-top: 10px; }
@@ -14,7 +14,6 @@
   </style>
 </head>
 <body>
-
 <h1>Food Log</h1>
 <p>Type anything about what you ate:</p>
 
@@ -28,7 +27,7 @@
 <div id="history"></div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbzRR-RHey2MaVnmwmZFPPe9wFv3RPc4hPrJ6Zr9Csfp9RwUyrAj9KBWsWoAMG1Rt-SY/exec";
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbzaWHemhcsJNmHPrwoiNwDbJcE2KRBYmm8_cHI1y1kfVruhztG9SZrgbo2ullWCYQWJ/exec";
 const HISTORY_KEY = "foodlog_history";
 
 // ---------------------------
