--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <title>Food Log</title>
   <style>
     body {
-      font-family: sans-serif;
-      height: 100vh;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #fafafa;
+    font-family: sans-serif;
+    margin: 0;
+    padding-top: 30px;   /* pushes content down but stays at top */
+    display: flex;
+    justify-content: center;
+    background: #fafafa;
+    min-height: 100vh;
     }
+
 
     .container {
       width: 100%;
