--- a/index.html
+++ b/index.html
@@ -13,20 +13,43 @@
     background: #fafafa;
     min-height: 90vh;
     }
-
-
+    
     .container {
-      width: 100%;
-      max-width: 450px;
-      padding: 30px;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      text-align: center;
+    width: 100%;
+    max-width: 450px;
+    padding: 30px;
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    text-align: center;
+    }
+
+    /* MOBILE STYLE */
+    @media (max-width: 600px) {
+    .container {
+        max-width: 95%;
+        padding: 20px;
+        border-radius: 40;         /* optional: mobile fullscreen card look */
+        box-shadow: none;         /* cleaner on mobile */
     }
 
     textarea {
-      width: 100%;
+        height: 150px;
+        font-size: 16px;
+    }
+
+    button {
+        font-size: 18px;
+        padding: 14px;
+    }
+
+    #history {
+        max-height: 300px;
+    }
+    }
+
+    textarea {
+      width: 90%;
       height: 120px;
       padding: 10px;
       border-radius: 8px;
