--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png" />
+    <meta property="og:title" content="My Website" />
+    <meta property="og:description" content="Food logging made simple." />
+    <meta property="og:image" content="/share-image.png" />
+    <meta property="og:type" content="website" />
   <title>Food Log</title>
   <style>
     body {
