--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
   <textarea id="entry" placeholder="Example: 'Lunch: pasta, salad, iced coffee'"></textarea>
 
   <button onclick="submitEntry()">Submit</button>
+  <p id="status"></p>
 
   <div style="pointer-events: none; display: flex; justify-content: center;">
     <iframe width="450" height="200" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRGxfCDcxJiaVzuaExWvUePGWCQY2f1zLJMOyR9ADnKI69O8TN__7iOsiqSCzXyP0TPSrRJu5K50-cV/pubchart?oid=1608343739&amp;format=interactive"></iframe>
